--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
 # Chat
 DEBUG=True
-AZURE_OPENAI_RESOURCE=
-AZURE_OPENAI_MODEL=
+AZURE_OPENAI_RESOURCE=aoi-gpt4o-chatgpt-prod-swedcent
+AZURE_OPENAI_MODEL=gpt4o-chatgpt-prod-swedcent
 AZURE_OPENAI_KEY=
-AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
+AZURE_OPENAI_MODEL_NAME=gpt-4o
 AZURE_OPENAI_TEMPERATURE=0
 AZURE_OPENAI_TOP_P=1.0
 AZURE_OPENAI_MAX_TOKENS=1000
@@ -24,14 +24,14 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
+UI_TITLE=ChatGPT4-o
 UI_LOGO=
 UI_CHAT_LOGO=
-UI_CHAT_TITLE=
-UI_CHAT_DESCRIPTION=
+UI_CHAT_TITLE=Herzlich Willkommen beim beim Dr. Ausbüttel Chat GPT4-o
+UI_CHAT_DESCRIPTION="Ich bin dein KI-Assistent und unterstütze dich bei Anfragen, erstelle Zusammenfassungen, strukturiere Informationen und generiere innovative Lösungen – stets vertraulich und nachhaltig"
 UI_FAVICON=
 # Chat history
-AZURE_COSMOSDB_ACCOUNT=
+AZURE_COSMOSDB_ACCOUNT=db-chatgpt-4o
 AZURE_COSMOSDB_DATABASE=db_conversation_history
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=conversations
 AZURE_COSMOSDB_ACCOUNT_KEY=
