--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
 # Chat
 DEBUG=True
-AZURE_OPENAI_RESOURCE=
-AZURE_OPENAI_MODEL=
+AZURE_OPENAI_RESOURCE=aoi-gpt4o-pm-prod-swedcent
+AZURE_OPENAI_MODEL=gpt4o-pm-prod-swedcent
 AZURE_OPENAI_KEY=
-AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
+AZURE_OPENAI_MODEL_NAME=gpt-4o
 AZURE_OPENAI_TEMPERATURE=0
 AZURE_OPENAI_TOP_P=1.0
 AZURE_OPENAI_MAX_TOKENS=1000
@@ -24,14 +24,14 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
+UI_TITLE=Produktmanager
 UI_LOGO=
 UI_CHAT_LOGO=
-UI_CHAT_TITLE=
-UI_CHAT_DESCRIPTION=
+UI_CHAT_TITLE=Herzlich Willkommen beim beim Dr. Ausbüttel Produktmanager
+UI_CHAT_DESCRIPTION="Ich bin dein Ansprechpartner für Wundversorgung und unsere Kunden. Ich unterstütze dich bei allen Fragen rund um Marktanalyse, Produktentwicklung, Qualitätssicherung und Marketing – und greife dazu auf exklusives internes Wissen zu"
 UI_FAVICON=
 # Chat history
-AZURE_COSMOSDB_ACCOUNT=
+AZURE_COSMOSDB_ACCOUNT=db-productmanager
 AZURE_COSMOSDB_DATABASE=db_conversation_history
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=conversations
 AZURE_COSMOSDB_ACCOUNT_KEY=
@@ -42,8 +42,8 @@ SEARCH_TOP_K=5
 SEARCH_STRICTNESS=3
 SEARCH_ENABLE_IN_DOMAIN=True
 # Chat with data: Azure AI Search
-AZURE_SEARCH_SERVICE=
-AZURE_SEARCH_INDEX=
+AZURE_SEARCH_SERVICE=srch-pm-prod-swedcent
+AZURE_SEARCH_INDEX=index
 AZURE_SEARCH_KEY=
 AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG=
 AZURE_SEARCH_INDEX_IS_PRECHUNKED=False
