--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,17 @@
 # Chat
 DEBUG=True
-AZURE_OPENAI_RESOURCE=aoi-gpt4o-sb-prod-swedcent
-AZURE_OPENAI_MODEL=gpt4o-sb-prod-swedcent
+AZURE_OPENAI_RESOURCE=aoi-gpt4o-mw-prod-swedcent
+AZURE_OPENAI_MODEL=gpt4o-mw-prod-swedcent
 AZURE_OPENAI_KEY=
 AZURE_OPENAI_MODEL_NAME=gpt-4o
-AZURE_OPENAI_TEMPERATURE=0
-AZURE_OPENAI_TOP_P=1.0
-AZURE_OPENAI_MAX_TOKENS=1000
+AZURE_OPENAI_TEMPERATURE=0.5
+AZURE_OPENAI_TOP_P=0.5
+AZURE_OPENAI_MAX_TOKENS=2000
 AZURE_OPENAI_STOP_SEQUENCE=
 AZURE_OPENAI_SEED=
 AZURE_OPENAI_CHOICES_COUNT=1
-AZURE_OPENAI_PRESENCE_PENALTY=0.0
-AZURE_OPENAI_FREQUENCY_PENALTY=0.0
+AZURE_OPENAI_PRESENCE_PENALTY=0.5
+AZURE_OPENAI_FREQUENCY_PENALTY=0.5
 AZURE_OPENAI_LOGIT_BIAS=
 AZURE_OPENAI_USER=
 AZURE_OPENAI_TOOLS=
@@ -20,30 +20,30 @@ AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find infor
 AZURE_OPENAI_PREVIEW_API_VERSION=2024-05-01-preview
 AZURE_OPENAI_STREAM=True
 AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_EMBEDDING_NAME=
+AZURE_OPENAI_EMBEDDING_NAME=ada2-mw-prod-swedcent
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=Strategieberater
+UI_TITLE=Wissensarbeiter
 UI_LOGO=
 UI_CHAT_LOGO=
-UI_CHAT_TITLE=Herzlich Willkommen beim Dr. Ausbüttel Strategieberater
-UI_CHAT_DESCRIPTION="Ich bin dein Sparringspartner, wenn es um Strategie und mentale Modelle geht. Ich unterstütze dich dabei fundierte und datenbasierte strategische Entscheidungen zu treffen. Dabei arbeite ich stets vertraulich und professionell"
+UI_CHAT_TITLE=Herzlich Willkommen beim Dr. Ausbüttel Wissensarbeiter
+UI_CHAT_DESCRIPTION="Ich bin dein Ansprechpartner, wenn es um wissenschaftliches arbeiten geht. Ich helfe dir Fachpublikationen zu analysieren, Studienergebnisse zu verstehen und neue Inhalte zu generieren"
 UI_FAVICON=
 # Chat history
-AZURE_COSMOSDB_ACCOUNT=db-strategieberater
+AZURE_COSMOSDB_ACCOUNT=db-wissensarbeiter
 AZURE_COSMOSDB_DATABASE=db_conversation_history
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=conversations
 AZURE_COSMOSDB_ACCOUNT_KEY=
-AZURE_COSMOSDB_ENABLE_FEEDBACK=False
+AZURE_COSMOSDB_ENABLE_FEEDBACK=True
 # Chat with data: common settings
 DATASOURCE_TYPE=AzureCognitiveSearch
 SEARCH_TOP_K=5
 SEARCH_STRICTNESS=3
 SEARCH_ENABLE_IN_DOMAIN=True
 # Chat with data: Azure AI Search
-AZURE_SEARCH_SERVICE=srch-rag-prod-frcent-007
-AZURE_SEARCH_INDEX=index-index
+AZURE_SEARCH_SERVICE=srch-mw-prod-swedcent
+AZURE_SEARCH_INDEX=index
 AZURE_SEARCH_KEY=
 AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG=
 AZURE_SEARCH_INDEX_IS_PRECHUNKED=False
@@ -53,8 +53,8 @@ AZURE_SEARCH_CONTENT_COLUMNS=
 AZURE_SEARCH_FILENAME_COLUMN=
 AZURE_SEARCH_TITLE_COLUMN=
 AZURE_SEARCH_URL_COLUMN=
-AZURE_SEARCH_VECTOR_COLUMNS=
-AZURE_SEARCH_QUERY_TYPE=simple
+AZURE_SEARCH_VECTOR_COLUMNS=contentVector
+AZURE_SEARCH_QUERY_TYPE=vector
 AZURE_SEARCH_PERMITTED_GROUPS_COLUMN=
 AZURE_SEARCH_STRICTNESS=3
 # Chat with data: Azure CosmosDB Mongo VCore
