--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 # Chat
 DEBUG=True
-AZURE_OPENAI_RESOURCE=aoi-gpt4o-mw-prod-swedcent
-AZURE_OPENAI_MODEL=gpt4o-mw-prod-swedcent
+AZURE_OPENAI_RESOURCE=aoi-gpt4o-pm-prod-swedcent
+AZURE_OPENAI_MODEL=gpt4o-pm-prod-swedcent
 AZURE_OPENAI_KEY=
 AZURE_OPENAI_MODEL_NAME=gpt-4o
 AZURE_OPENAI_TEMPERATURE=0.5
@@ -24,14 +24,14 @@ AZURE_OPENAI_EMBEDDING_NAME=ada2-mw-prod-swedcent
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=Wissensarbeiter
+UI_TITLE=Produktmanager
 UI_LOGO=
 UI_CHAT_LOGO=
 UI_CHAT_TITLE=Herzlich Willkommen beim Dr. Ausbüttel Wissensarbeiter
-UI_CHAT_DESCRIPTION="Ich bin dein Ansprechpartner, wenn es um wissenschaftliches arbeiten geht. Ich helfe dir Fachpublikationen zu analysieren, Studienergebnisse zu verstehen und neue Inhalte zu generieren"
+UI_CHAT_DESCRIPTION="Ich bin dein Ansprechpartner für Wundversorgung und unsere Kunden. Ich unterstütze dich bei allen Fragen rund um Marktanalyse, Produktentwicklung, Qualitätssicherung und Marketing – und greife dazu auf exklusives internes Wissen zu"
 UI_FAVICON=
 # Chat history
-AZURE_COSMOSDB_ACCOUNT=db-wissensarbeiter
+AZURE_COSMOSDB_ACCOUNT=db-productmanager
 AZURE_COSMOSDB_DATABASE=db_conversation_history
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=conversations
 AZURE_COSMOSDB_ACCOUNT_KEY=
@@ -42,7 +42,7 @@ SEARCH_TOP_K=5
 SEARCH_STRICTNESS=3
 SEARCH_ENABLE_IN_DOMAIN=True
 # Chat with data: Azure AI Search
-AZURE_SEARCH_SERVICE=srch-mw-prod-swedcent
+AZURE_SEARCH_SERVICE=srch-pm-prod-swedcent
 AZURE_SEARCH_INDEX=index
 AZURE_SEARCH_KEY=
 AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG=
